<resources>
    <string name="app_name" translatable="false">Forgettee</string>

    <!--  context descriptions  -->
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="add_todo_item">Add todo item</string>
    <string name="delete_todo_item">Delete todo item</string>

    <!--  buttons text  -->
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="delete_all">Delete all</string>
    <string name="change_theme">Change theme</string>
    <string name="return_item">Return</string>
    <string name="copy_item">Create a copy</string>
    <string name="delete_item">Delete</string>
    <string name="delete_archive_item_button">delete archive item</string>

    <!--  IU texts  -->
    <string name="edit">Edit</string>
    <string name="complete">Complete</string>
    <string name="archive">Archive</string>
    <string name="settings">Settings</string>
    <string name="no_tasks">No tasks</string>
    <string name="placeholder_main_description">Press the + button to\nadd a task</string>
    <string name="empty">Empty</string>
    <string name="placeholder_archive_description">There are no completed\ntasks in archive</string>
    <string name="placeholder_search_archive_description">There are no completed\ntasks for your request</string>
    <string name="deleted_toast_text">Deleted: %1$s</string>
    <string name="copied_toast_text">Created active task: %1$s</string>
    <string name="week_range" translatable="false">%1$s – %2$s%3$s</string>

    <!--  settings texts  -->
    <string name="app_theme">App theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="task_settings">Task settings</string>
    <string name="archive_settings">Archive settings</string>
    <string name="add_to_the_end_description">Add new tasks to the end of the list</string>
    <string name="use_24_format_description">Use 24-hour time format</string>

    <!--  Placeholders for textview  -->
    <string name="what_will_you_do">Task description</string>
    <string name="search">Search</string>

    <!--  Toast messages  -->
    <string name="enter_todo_task_description">*Enter todo task description</string>

    <!--  Tutorial tasks  -->
    <string name="tutorial_task_finish">1. Click me to mark the task done</string>
    <string name="tutorial_task_edit">2. Swipe me left to edit the task</string>
    <string name="tutorial_task_delete">3. Swipe me right to complete the task</string>
    <string name="tutorial_task_reorder">4. Click and hold me to move task</string>
</resources>