<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_add_todo"
    android:background="@drawable/popup_add_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_todo_edittext"
        android:layout_marginTop="@dimen/size_24_dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/textview_empty_warning"
            android:text="@string/enter_todo_task_description"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/theme_red"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/size_24_dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_todo_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_24_dp"

            android:autofillHints="Input your todo task"
            android:textSize="@dimen/edit_todo_text_size"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="?attr/colorOnPrimary"
            android:backgroundTint="@color/theme_red"
            android:textColorHint="?attr/colorOnSecondaryFixedVariant"
            android:paddingHorizontal="@dimen/size_2_dp"
            android:hint="@string/what_will_you_do"
            android:background="@drawable/edittext_underline"

            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/textview_empty_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btn_add_or_save_todo"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_48_dp"
        android:layout_marginHorizontal="@dimen/size_24_dp"
        android:layout_marginBottom="@dimen/size_24_dp"
        android:layout_marginTop="@dimen/size_16_dp"
        android:gravity="center"
        android:background="@drawable/button_primary_ripple"
        android:text="@string/add_button"
        android:textColor="?attr/colorOnPrimary"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/add_button_text_size"


        app:layout_constraintTop_toBottomOf="@id/container_todo_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete_item"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/btn_delete_item"
        android:layout_width="@dimen/size_48_dp"
        android:layout_height="@dimen/size_48_dp"
        android:src="@drawable/icn_delete"
        android:background="@drawable/button_primary_ripple"
        android:contentDescription="@string/delete_todo_item"
        android:layout_marginEnd="@dimen/size_24_dp"
        android:layout_marginStart="-16dp"
        app:layout_constraintStart_toEndOf="@id/btn_add_or_save_todo"
        app:layout_constraintTop_toTopOf="@id/btn_add_or_save_todo"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_or_save_todo"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>