<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64_dp"
        android:paddingHorizontal="@dimen/size_24_dp"

        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/size_48_dp"
            android:layout_height="@dimen/size_48_dp"
            android:src="@drawable/icn_back_arrow"
            android:background="@drawable/image_button_ripple"
            android:contentDescription="@string/menu"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archive"
            android:textSize="@dimen/toolbar_header_size"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_16_dp"

            android:autofillHints="Input your todo task"
            android:textSize="@dimen/edit_todo_text_size"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="?attr/colorOnPrimary"
            android:backgroundTint="@color/theme_red"
            android:textColorHint="?attr/colorOnSecondaryFixedVariant"
            android:paddingHorizontal="@dimen/size_2_dp"
            android:hint="@string/search"
            android:background="@drawable/edittext_underline"

            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_search"/>

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="@dimen/size_48_dp"
            android:layout_height="@dimen/size_48_dp"
            android:src="@drawable/icn_search"
            android:background="@drawable/image_button_ripple"
            android:contentDescription="@string/menu"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_todo_archive_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_empty_list_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_placeholder_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:gravity="center"
            android:background="@drawable/placeholder_message_background"
            android:textSize="@dimen/placeholder_title_text_size"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="?attr/colorSecondary"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_placeholder_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_archive_description"
            android:gravity="center"
            android:textSize="@dimen/placeholder_description_text_size"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="?attr/colorOnSecondaryFixedVariant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_placeholder_title"
            android:layout_marginTop="@dimen/size_8_dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>